force-app/main/default/objects/Estimate__c/fields/Assessment_Troubleshoot__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Troubleshoot__c</fullName>
    <label>Assessment/Troubleshoot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>