force-app/main/default/objects/Estimate__c/fields/Estimate_Type__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Type__c</fullName>
    <label>Estimate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incurred</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>