force-app/main/default/objects/Estimate__c/fields/Formdata__c.field-meta.xml
<CustomField>
    <fullName>Formdata__c</fullName>
    <label>Formdata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>