force-app/main/default/objects/Estimate__c/fields/Grand_total__c.field-meta.xml
<CustomField>
    <fullName>Grand_total__c</fullName>
    <formula>total_amount__c  +  Tax__c  -  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>