force-app/main/default/objects/Estimate__c/fields/Grand_Total_amount__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_amount__c</fullName>
    <formula>Net_Total__c    +    Total_Discount__c  +  Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>