force-app/main/default/objects/Estimate__c/fields/Incurred_Data__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Data__c</fullName>
    <label>Incurred Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>