force-app/main/default/objects/Estimate__c/fields/Internal_Estimate_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_Estimate_No__c</fullName>
    <label>Internal Estimate No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>