force-app/main/default/objects/Estimate__c/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <formula>Total_Labor_Amount_of_Incurred_Estimate__c + Total_Labor_Amount_of_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>