force-app/main/default/objects/Estimate__c/fields/total_amount__c.field-meta.xml
<CustomField>
    <fullName>total_amount__c</fullName>
    <label>Total amount (Without Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>