force-app/main/default/objects/Estimate__c/fields/Total_Labor_Amount_of_Incurred_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_Amount_of_Incurred_Estimate__c</fullName>
    <label>Total Labor Amount of Incurred Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>