force-app/main/default/objects/Estimate__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <formula>($User.FirstName) + ($User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Vendor</label>
    <type>Text</type>
</CustomField>